--- a/src/app/settings-page/settings-page.component.css
+++ b/src/app/settings-page/settings-page.component.css
@@ -1,4 +1,3 @@
-
 .mat-expansion-panel{
   box-shadow:none !important;
 }
@@ -54,9 +53,6 @@ button[name="addStateBtn"],button[name="addStatusBtn"]{
   float: right;
   background: #1d426f;
   border: none;
-}
-button[name="addStateBtn"]:hover,button[name="addStatusBtn"]:hover{
-      box-shadow: 1px 1px 4px black;
 }
 .stateOptions,.statusOptions{
   float:right;
